--- a/src/TeduBlog.Api/TeduBlog.Api.csproj
+++ b/src/TeduBlog.Api/TeduBlog.Api.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TeduBlog.Core\TeduBlog.Core.csproj" />
+    <ProjectReference Include="..\TeduBlog.Data\TeduBlog.Data.csproj" />
   </ItemGroup>
 
 </Project>
